fix : yearlytype title + font

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               </li>
               <li class="dropdown-item">
                 <button type="button" value="2" class="dropdown-option">
-                    연도별 구분
+                    연도별 범죄 비율(발생건수)
                 </button>
               </li>
            </ul>
